Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.5(EOL), 10.6, 10.11, 11.4
-
Can result in hang or crash
-
Fixed a server crash that could occur during query optimization when a stored procedure queries a view containing CONCAT or GROUP_CONCAT functions.
-
Q4/2025 Server Maintenance, Q1/2026 Server Development, Q1/2026 Server Maintenance
Description
We are experiencing a crash in MariaDB (version 10.6.21) on both Rocky Linux (release 9.4) and Amazon Linux 2
in a scenario involving views and stored procedures.
While the original query is much more complex, we are providing a simplified use case that can reliably reproduce the issue.
It appears that the crash occurs when:
a VIEW uses a CONCAT() or GROUP_CONCAT() function on a column definition, and
a STORED PROCEDURE queries this VIEW using a LIKE condition on the same column having that function.
This issue does not occur with the previously used version 10.6.16 — it only started happening after the upgrade to 10.6.21.
The crash can be consistently reproduced under these conditions:
create or replace table table_task ( id int auto_increment primary key, col1 int, col2 int, col3 int); |
insert into table_task select null,round(rand()*100),round(rand()*100),round(rand()*100) from seq_1_to_1000; |
|
|
create or replace view v_t_task as |
select col1 as taskcid, sum(col3) as suc3, |
group_concat('-',case when `col3` is not null then `col2` else '' end,'-' separator ',') AS `listc2` |
from table_task |
group by col1; |
|
|
delimiter //
|
CREATE or replace PROCEDURE `spmona`(IN `IN_listc2` VARCHAR(1000), IN `IN_limitfrom` INT, IN `IN_limitto` INT) |
BEGIN
|
SELECT * |
FROM
|
v_t_task `t`
|
WHERE
|
CASE WHEN IN_listc2 IS NOT NULL THEN `t`.`listc2` LIKE CONCAT("%", IN_listc2, "%") ELSE TRUE END |
LIMIT
|
IN_limitfrom,
|
IN_limitto;
|
END // |
delimiter ;
|
|
|
CALL spmona(null,0,25); |
Attachments
Issue Links
- is duplicated by
-
MDEV-38950 Server crash (Sig 11) in pushdown_cond_for_derived
-
- Closed
-
- relates to
-
MDEV-39160 Server crash in Item_ref::const_item
-
- Closed
-