MDEV-36678: Various crashes upon stored procedure querying view with concat/group_concat

Problem:
  A stored procedure querying a view with `CONCAT`/`GROUP_CONCAT` could
  crash due to a NULL pointer dereference during query optimization.

  During pushdown, `Item_direct_ref_to_item::do_build_clone` creates a
  clone object but would fail to initialize the `ref` pointer, leaving
  it NULL. When this partially-initialized clone is used and the NULL
  `ref` is dereferenced, server crashes.

Fix:
  The `Item_direct_ref_to_item::set_item` method is made to update the
  item and reference, making the object complete and safe to access.