sql/item.h
@@ -8216,7 +8216,12 @@ public:
   bool excl_dep_on_grouping_fields(st_select_lex *sel) override
   { return m_item->excl_dep_on_grouping_fields(sel); }
   bool is_expensive() override { return m_item->is_expensive(); }
-  void set_item(Item *item) { m_item= item; }
+  void set_item(Item *item)
+  {
+    m_item= item;
+    ref= &m_item;
+  }
+
   Item *do_build_clone(THD *thd) const override
   {
     Item *clone_item= m_item->build_clone(thd);
